# scrapy-newbie

./: .gitignore  README.md  pyproject.toml
app/app/: items.py  models.py  pipelines.py  settings.py
app/app/spiders/: zenn_my_article_spider.py
scripts/: dev.bash
